@@ -1,0 +1,1 @@
+MD5 96c484927b5938b537b09969a6de7a34 ndiswrapper-0.8.tar.gz 69625
