@@ -1,6 +1,12 @@
 # ChangeLog for net-wireless/ndiswrapper
 # Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-wireless/ndiswrapper/ChangeLog,v 1.6 2004/06/25 00:46:46 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-wireless/ndiswrapper/ChangeLog,v 1.7 2004/07/08 03:20:08 latexer Exp $
+
+*ndiswrapper-0.8 (07 Jul 2004)
+
+  07 Jul 2004; Peter Johanson <latexer@gentoo.org> +ndiswrapper-0.8.ebuild:
+  Bump. Added fix for using M= with new enough kernels, and a few small tweaks
+  here and there. See bug #49479.
 
 *ndiswrapper-0.6-r1 (29 Mar 2004)
 
